load transaction fixed but saved not yet